--- a/src/main/res/layout/fragment_main.xml
+++ b/src/main/res/layout/fragment_main.xml
@@ -2,10 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/listview_forecast"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </ListView>
+        android:layout_height="match_parent"/>
 </FrameLayout>
