Update first page. Parsing data from server.

--- a/src/main/res/layout/list_item_forecast_today.xml
+++ b/src/main/res/layout/list_item_forecast_today.xml
@@ -3,9 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="horizontal"
-    android:background="@drawable/today_touch_selector">
+    android:background="@drawable/today_touch_selector"
+    android:elevation="4dp"
+    >
 
     <LinearLayout
         android:layout_height="wrap_content"
