--- a/src/main/res/layout/list_item_forecast.xml
+++ b/src/main/res/layout/list_item_forecast.xml
@@ -1,18 +1,12 @@
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:minHeight="?android:attr/listPreferredItemHeight"
-    android:orientation="horizontal"
-    android:background="@drawable/touch_selector">
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <FrameLayout
             android:layout_width="60dp"
-            android:layout_height="wrap_content">
+            android:layout_height="60dp">
 
             <ImageView
                 android:id="@+id/list_item_icon"
@@ -73,5 +67,4 @@
                 android:text="temp"
                 android:textAppearance="?android:textAppearanceSmall"/>
         </LinearLayout>
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+</LinearLayout>
