-Adding simple interaction with local db(SQLite) -Refactor Weather Repository -Refactor folders structure

--- a/src/main/res/layout/activity_detail.xml
+++ b/src/main/res/layout/activity_detail.xml
@@ -3,5 +3,5 @@
     android:id="@+id/weather_detail_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dux.weather_forecast.ui.DetailActivity"
+    tools:context=".ui.activity.DetailActivity"
     tools:ignore="MergeRootFrame" />
