--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -2,8 +2,8 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_forecast"
-    android:name="com.dux.weather_forecast.ui.ForecastFragment"
+    android:name="com.dux.weather_forecast.ui.fragment.ForecastFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dux.weather_forecast.ui.ForecastFragment"
+    tools:context=".ui.fragment.ForecastFragment"
     tools:layout="@android:layout/list_content" />
