--- a/src/main/res/layout/list_item_forecast_today.xml
+++ b/src/main/res/layout/list_item_forecast_today.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:background="@drawable/today_touch_selector"
+    android:background="@color/sunshine_blue"
     android:elevation="4dp"
     >
 
